--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
    <div class="container">
     <div class="cube">
-        <img src="./facebook.png" alt="페이스북 아이콘 이미지">
-        <img src="./twitter.png" alt="트위터 아이콘 이미지">
-        <img src="./youtube.png" alt="유튜브 아이콘 이미지">
-        <img src="./instagram.png" alt="인스타 아이콘 이미지">
+        <img src="facebook.png" alt="페이스북 아이콘 이미지">
+        <img src="twitter.png" alt="트위터 아이콘 이미지">
+        <img src="youtube.png" alt="유튜브 아이콘 이미지">
+        <img src="instagram.png" alt="인스타 아이콘 이미지">
     </div>
     <script>
         let deg = 0;
